@@ -15,6 +15,8 @@ MIDIboxSEQ V4.059
    o fixed stack overflow which happened when incoming OSC messages were forwarded
      to OSC in Live mode (they are now automatically filtered to avoid feedback loops)
 
+   o fixed group selection in BUTTON_DIRECT_TRACK1...16
+
 
 MIDIboxSEQ V4.058
 ~~~~~~~~~~~~~~~~~
